--- a/buildspec.yml
+++ b/buildspec.yml
@@ -25,7 +25,7 @@ phases:
   post_build:
     commands:
       - echo Build completed on `date`
-      - aws s3 sync build/ s3://bashproject --acl public-read
+      - aws s3 sync build/ s3://ifyapp --acl public-read
 artifacts:
   files:
     - 'build/*'
