--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,7 @@ phases:
       - echo DB USERNAME
       - echo $DB_USERNAME
       - echo Installing source NPM dependencies...
-      - npm install
+      - mvn install
       - aws --version
       - echo node environment
       - echo $NODE_ENV
@@ -19,7 +19,7 @@ phases:
       - echo Build started on `date`
       - echo first test codes
       - echo Compiling the codes
-      - npm run build
+      - mvn run build
       - echo Build finished, now moving to S3
   post_build:
     commands:
